--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,10 @@
 #container a {
   text-decoration: none;
 }
+
+ion-button{
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 15px;
+}
+
